--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev":"vite",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy" :"npm run build" ,
-    "deploy" : "gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "gh-pages": "^6.3.0",
     "react": "^19.1.0",
