--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "firstapp",
-  "homepage": "https://ajaychoudhary654329/.github.io/skillsense-Dashboard/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,7 +18,9 @@
     "@mui/material": "^7.2.0",
     "gh-pages": "^6.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router": "^7.7.0",
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
